--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: python
     buildCommand: |
       python -m pip install --upgrade pip
-      pip install --no-cache-dir -r requirements.txt
-    startCommand: uvicorn backend.main:app --host=0.0.0.0 --port=$PORT
+      pip install -e .
+    # The Procfile will be used automatically
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.8
