--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     buildCommand: |
       python -m pip install --upgrade pip
       pip install -e .
-    # The Procfile will be used automatically
+    startCommand: uvicorn main:app --host=0.0.0.0 --port=$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.8
