--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,3 @@
-# Copy this file to .env and replace with your actual Groq API key
 GROQ_API_KEY=your_groq_api_key_here
-
-# Optional: Change the port if needed
-# PORT=8000
-
-# Optional: Change the daily limit
-# DAILY_LIMIT=100
+PORT=8000
+DAILY_LIMIT=100
